* (bb/point-intersect?) added
* (hint-normalize)
* array arguments for GLSL shaders
* full stack trace with scheme errors
* (pdata-exists?)
* (set-gravity-mode) (add-force) (add-torque)
* planetarium rendering/dome projection
* (ga) - gets audio buffer directly
* clear screen (ctrl-q)
* (hint-noblend)
* (hint-nozwrite)
* video module(!)
* new voxel primitive
* big fft fix
* obj import optimisations
* obj import, supports all face types (and triangulates them) 
* (active-mesh) and (passive-mesh) for mesh based physics collisions 
* (voxel->blobby) 
* unicode support in editor
* (build-icosphere), sphere generated by subdividing an icosahedron

0.16

* fixed autodetect of GLSL and multitexturing 
* frame-hooks
* fixed orientations and texture coordinates to be more consistent
* particle depth sorting
* tiled-framedump for massive resolutions
* moved install out of plt collects
* (mouse-wheel)
* GLSL and multitexturing on by default
* new documentation pdf
* lots of fluxa stability fixes
* internal depth sort on particles
* added (build-type) and (build-extruded-type)
* added Perlin noise and Simplex noise functions (noise), (snoise)
* lots of fixes to fluxa to make it stable
* (reparent)
* (get-global-transform)
* (bb-intersect)
* inline GLSL code
* F4 execute s expr
* added stippled lines, (hint-wire-stippled), (line-pattern)
* added (set-cursor)
* new example game, fluxus invaders
* colour support for NURBS primitives
* OSX application

0.15

* ported to PLT 3.99
* removed scheme versions of obj import/export
* midi support - gabor papp
* added fluxa - an audio synth
* added text opacity on F10 and F11
* fixed saveas dialog, cursor and shift works
* inlined most of dada.h (~5% speedup)
* renamed build-line to build-ribbon
* more meshes to play with (used in frisbee examples)
* shadows now work on immediate mode objects
* key release fixed in drflux
* multi views/cameras
* better random functions with randomness.ss