@@ -369,7 +369,7 @@ Scheme_Object *update_audio(int argc, Scheme_Object **argv)
 // set-num-frequency-bins count
 // Returns: void
 // Description:
-// Sets the number of frequency bins to use for (gh) up to a limit of 128.
+// Sets the number of frequency bins to use for (gh) up to a limit of 127.
 // Example:
 // (set-num-frequency-bins 64)
 // EndFunctionDoc
@@ -386,6 +386,26 @@ Scheme_Object *set_num_frequency_bins(int argc, Scheme_Object **argv)
 	}
 	MZ_GC_UNREG();
 	return scheme_void;
+}
+
+// StartFunctionDoc-en
+// get-num-frequency-bins
+// Returns: count-number
+// Description:
+// Returns the number of frequency bins used for (gh), or 0 if the audio
+// is not started with (start-audio).
+// Example:
+// (get-num-frequency-bins)
+// EndFunctionDoc
+
+Scheme_Object *get_num_frequency_bins(int argc, Scheme_Object **argv)
+{
+	int bars = 0;
+	if (Audio != NULL)
+	{
+		bars = Audio->GetNumBars();
+	}
+	return scheme_make_integer_value(bars);
 }
 
 /////////////////////
@@ -412,6 +432,7 @@ Scheme_Object *scheme_reload(Scheme_Env *env)
 	scheme_add_global("smoothing-bias", scheme_make_prim_w_arity(smoothing_bias, "smoothing-bias", 1, 1), menv);
 	scheme_add_global("update-audio", scheme_make_prim_w_arity(update_audio, "update-audio", 0, 0), menv);
 	scheme_add_global("set-num-frequency-bins", scheme_make_prim_w_arity(set_num_frequency_bins, "set-num-frequency-bins", 1, 1), menv);
+	scheme_add_global("get-num-frequency-bins", scheme_make_prim_w_arity(get_num_frequency_bins, "get-num-frequency-bins", 0, 0), menv);
 
 	scheme_finish_primitive_module(menv);
 	MZ_GC_UNREG();
